--- a/example/src/index.css
+++ b/example/src/index.css
@@ -44,11 +44,18 @@ footer {
 }
 
 .section {
-	position: relative;
 	transform: skewY(-3deg);
 	z-index: -1;
 }
 
+.section:nth-of-type(odd) {
+	@apply bg-gray-100;
+}
+
+.section:nth-of-type(even) {
+	@apply bg-white;
+}
+
 .section > * {
-    transform: skewY(3deg);  /* Apply opposite skew to children */
+	transform: skewY(3deg);  /* Apply opposite skew to children */
 }
