--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @layer theme {
-  @import 'tailwindcss/theme.css';
+  @import 'tailwindcss/theme.css' important;
 }
 
 @layer base {
   .hello-csv {
-    @import 'tailwindcss/preflight.css';
+    @import 'tailwindcss/preflight.css' important;
   }
 }
 
@@ -12,7 +12,7 @@
 
 @layer utilities {
   .hello-csv {
-    @import 'tailwindcss/utilities.css';
+    @import 'tailwindcss/utilities.css' important;
   }
 }
 
